--- a/209-final-project/public/manifest.json
+++ b/209-final-project/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "FIFA 2022 Info",
+  "name": "FIFA 2022 Champion Prediction Information",
   "icons": [
     {
       "src": "favicon.ico",
