--- a/209-final-project/package.json
+++ b/209-final-project/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.3.4",
     "react-scripts": "5.0.1",
     "react-vega": "^7.6.0",
     "vega": "^5.22.1",
