--- a/209-final-project/src/specs/final-four-appearances.json
+++ b/209-final-project/src/specs/final-four-appearances.json
@@ -1,265 +1,275 @@
 {
-    "$schema": "https://vega.github.io/schema/vega-lite/v4.17.0.json",
-    "config": {
-      "view": {
-        "continuousHeight": 300,
-        "continuousWidth": 400
+  "$schema": "https://vega.github.io/schema/vega-lite/v4.17.0.json",
+  "config": {
+    "view": {
+      "continuousHeight": 300,
+      "continuousWidth": 400
+    }
+  },
+  "data": {
+    "name": "data-6cab110acf15c1887f3fae628e8cd65e"
+  },
+  "datasets": {
+    "data-6cab110acf15c1887f3fae628e8cd65e": [
+      {
+        "Champion": 2.0,
+        "Country": "Argentina",
+        "Finalist": 5.0,
+        "Fourth": 0.0,
+        "Second": 3.0,
+        "Third": 0.0,
+        "Total F4 Appearances": 5.0
+      },
+      {
+        "Champion": 0.0,
+        "Country": "Austria",
+        "Finalist": 0.0,
+        "Fourth": 1.0,
+        "Second": 0.0,
+        "Third": 1.0,
+        "Total F4 Appearances": 2.0
+      },
+      {
+        "Champion": 0.0,
+        "Country": "Belgium",
+        "Finalist": 0.0,
+        "Fourth": 1.0,
+        "Second": 0.0,
+        "Third": 1.0,
+        "Total F4 Appearances": 2.0
+      },
+      {
+        "Champion": 5.0,
+        "Country": "Brazil",
+        "Finalist": 7.0,
+        "Fourth": 2.0,
+        "Second": 2.0,
+        "Third": 2.0,
+        "Total F4 Appearances": 11.0
+      },
+      {
+        "Champion": 0.0,
+        "Country": "Bulgaria",
+        "Finalist": 0.0,
+        "Fourth": 1.0,
+        "Second": 0.0,
+        "Third": 0.0,
+        "Total F4 Appearances": 1.0
+      },
+      {
+        "Champion": 0.0,
+        "Country": "Chile",
+        "Finalist": 0.0,
+        "Fourth": 0.0,
+        "Second": 0.0,
+        "Third": 1.0,
+        "Total F4 Appearances": 1.0
+      },
+      {
+        "Champion": 0.0,
+        "Country": "Croatia",
+        "Finalist": 1.0,
+        "Fourth": 0.0,
+        "Second": 1.0,
+        "Third": 1.0,
+        "Total F4 Appearances": 2.0
+      },
+      {
+        "Champion": 0.0,
+        "Country": "Czechoslovakia",
+        "Finalist": 2.0,
+        "Fourth": 0.0,
+        "Second": 2.0,
+        "Third": 0.0,
+        "Total F4 Appearances": 2.0
+      },
+      {
+        "Champion": 1.0,
+        "Country": "England",
+        "Finalist": 1.0,
+        "Fourth": 2.0,
+        "Second": 0.0,
+        "Third": 0.0,
+        "Total F4 Appearances": 3.0
+      },
+      {
+        "Champion": 2.0,
+        "Country": "France",
+        "Finalist": 3.0,
+        "Fourth": 1.0,
+        "Second": 1.0,
+        "Third": 2.0,
+        "Total F4 Appearances": 6.0
+      },
+      {
+        "Champion": 4.0,
+        "Country": "Germany",
+        "Finalist": 8.0,
+        "Fourth": 1.0,
+        "Second": 4.0,
+        "Third": 4.0,
+        "Total F4 Appearances": 13.0
+      },
+      {
+        "Champion": 0.0,
+        "Country": "Hungary",
+        "Finalist": 2.0,
+        "Fourth": 0.0,
+        "Second": 2.0,
+        "Third": 0.0,
+        "Total F4 Appearances": 2.0
+      },
+      {
+        "Champion": 4.0,
+        "Country": "Italy",
+        "Finalist": 6.0,
+        "Fourth": 1.0,
+        "Second": 2.0,
+        "Third": 1.0,
+        "Total F4 Appearances": 8.0
+      },
+      {
+        "Champion": 0.0,
+        "Country": "Korea Republic",
+        "Finalist": 0.0,
+        "Fourth": 1.0,
+        "Second": 0.0,
+        "Third": 0.0,
+        "Total F4 Appearances": 1.0
+      },
+      {
+        "Champion": 0.0,
+        "Country": "Netherlands",
+        "Finalist": 3.0,
+        "Fourth": 1.0,
+        "Second": 3.0,
+        "Third": 1.0,
+        "Total F4 Appearances": 5.0
+      },
+      {
+        "Champion": 0.0,
+        "Country": "Poland",
+        "Finalist": 0.0,
+        "Fourth": 0.0,
+        "Second": 0.0,
+        "Third": 2.0,
+        "Total F4 Appearances": 2.0
+      },
+      {
+        "Champion": 0.0,
+        "Country": "Portugal",
+        "Finalist": 0.0,
+        "Fourth": 1.0,
+        "Second": 0.0,
+        "Third": 1.0,
+        "Total F4 Appearances": 2.0
+      },
+      {
+        "Champion": 0.0,
+        "Country": "Soviet Union",
+        "Finalist": 0.0,
+        "Fourth": 1.0,
+        "Second": 0.0,
+        "Third": 0.0,
+        "Total F4 Appearances": 1.0
+      },
+      {
+        "Champion": 1.0,
+        "Country": "Spain",
+        "Finalist": 1.0,
+        "Fourth": 1.0,
+        "Second": 0.0,
+        "Third": 0.0,
+        "Total F4 Appearances": 2.0
+      },
+      {
+        "Champion": 0.0,
+        "Country": "Sweden",
+        "Finalist": 1.0,
+        "Fourth": 1.0,
+        "Second": 1.0,
+        "Third": 2.0,
+        "Total F4 Appearances": 4.0
+      },
+      {
+        "Champion": 0.0,
+        "Country": "Turkey",
+        "Finalist": 0.0,
+        "Fourth": 0.0,
+        "Second": 0.0,
+        "Third": 1.0,
+        "Total F4 Appearances": 1.0
+      },
+      {
+        "Champion": 0.0,
+        "Country": "USA",
+        "Finalist": 0.0,
+        "Fourth": 0.0,
+        "Second": 0.0,
+        "Third": 1.0,
+        "Total F4 Appearances": 1.0
+      },
+      {
+        "Champion": 2.0,
+        "Country": "Uruguay",
+        "Finalist": 2.0,
+        "Fourth": 3.0,
+        "Second": 0.0,
+        "Third": 0.0,
+        "Total F4 Appearances": 5.0
+      },
+      {
+        "Champion": 0.0,
+        "Country": "Yugoslavia",
+        "Finalist": 0.0,
+        "Fourth": 2.0,
+        "Second": 0.0,
+        "Third": 0.0,
+        "Total F4 Appearances": 2.0
       }
+    ]
+  },
+  "encoding": {
+    "color": {
+      "field": "Legend",
+      "type": "nominal"
     },
-    "data": {
-      "name": "data-6cab110acf15c1887f3fae628e8cd65e"
-    },
-    "datasets": {
-      "data-6cab110acf15c1887f3fae628e8cd65e": [
-        {
-          "Champion": 2.0,
-          "Country": "Argentina",
-          "Finalist": 5.0,
-          "Fourth": 0.0,
-          "Second": 3.0,
-          "Third": 0.0,
-          "Total F4 Appearances": 5.0
-        },
-        {
-          "Champion": 0.0,
-          "Country": "Austria",
-          "Finalist": 0.0,
-          "Fourth": 1.0,
-          "Second": 0.0,
-          "Third": 1.0,
-          "Total F4 Appearances": 2.0
-        },
-        {
-          "Champion": 0.0,
-          "Country": "Belgium",
-          "Finalist": 0.0,
-          "Fourth": 1.0,
-          "Second": 0.0,
-          "Third": 1.0,
-          "Total F4 Appearances": 2.0
-        },
-        {
-          "Champion": 5.0,
-          "Country": "Brazil",
-          "Finalist": 7.0,
-          "Fourth": 2.0,
-          "Second": 2.0,
-          "Third": 2.0,
-          "Total F4 Appearances": 11.0
-        },
-        {
-          "Champion": 0.0,
-          "Country": "Bulgaria",
-          "Finalist": 0.0,
-          "Fourth": 1.0,
-          "Second": 0.0,
-          "Third": 0.0,
-          "Total F4 Appearances": 1.0
-        },
-        {
-          "Champion": 0.0,
-          "Country": "Chile",
-          "Finalist": 0.0,
-          "Fourth": 0.0,
-          "Second": 0.0,
-          "Third": 1.0,
-          "Total F4 Appearances": 1.0
-        },
-        {
-          "Champion": 0.0,
-          "Country": "Croatia",
-          "Finalist": 1.0,
-          "Fourth": 0.0,
-          "Second": 1.0,
-          "Third": 1.0,
-          "Total F4 Appearances": 2.0
-        },
-        {
-          "Champion": 0.0,
-          "Country": "Czechoslovakia",
-          "Finalist": 2.0,
-          "Fourth": 0.0,
-          "Second": 2.0,
-          "Third": 0.0,
-          "Total F4 Appearances": 2.0
-        },
-        {
-          "Champion": 1.0,
-          "Country": "England",
-          "Finalist": 1.0,
-          "Fourth": 2.0,
-          "Second": 0.0,
-          "Third": 0.0,
-          "Total F4 Appearances": 3.0
-        },
-        {
-          "Champion": 2.0,
-          "Country": "France",
-          "Finalist": 3.0,
-          "Fourth": 1.0,
-          "Second": 1.0,
-          "Third": 2.0,
-          "Total F4 Appearances": 6.0
-        },
-        {
-          "Champion": 4.0,
-          "Country": "Germany",
-          "Finalist": 8.0,
-          "Fourth": 1.0,
-          "Second": 4.0,
-          "Third": 4.0,
-          "Total F4 Appearances": 13.0
-        },
-        {
-          "Champion": 0.0,
-          "Country": "Hungary",
-          "Finalist": 2.0,
-          "Fourth": 0.0,
-          "Second": 2.0,
-          "Third": 0.0,
-          "Total F4 Appearances": 2.0
-        },
-        {
-          "Champion": 4.0,
-          "Country": "Italy",
-          "Finalist": 6.0,
-          "Fourth": 1.0,
-          "Second": 2.0,
-          "Third": 1.0,
-          "Total F4 Appearances": 8.0
-        },
-        {
-          "Champion": 0.0,
-          "Country": "Korea Republic",
-          "Finalist": 0.0,
-          "Fourth": 1.0,
-          "Second": 0.0,
-          "Third": 0.0,
-          "Total F4 Appearances": 1.0
-        },
-        {
-          "Champion": 0.0,
-          "Country": "Netherlands",
-          "Finalist": 3.0,
-          "Fourth": 1.0,
-          "Second": 3.0,
-          "Third": 1.0,
-          "Total F4 Appearances": 5.0
-        },
-        {
-          "Champion": 0.0,
-          "Country": "Poland",
-          "Finalist": 0.0,
-          "Fourth": 0.0,
-          "Second": 0.0,
-          "Third": 2.0,
-          "Total F4 Appearances": 2.0
-        },
-        {
-          "Champion": 0.0,
-          "Country": "Portugal",
-          "Finalist": 0.0,
-          "Fourth": 1.0,
-          "Second": 0.0,
-          "Third": 1.0,
-          "Total F4 Appearances": 2.0
-        },
-        {
-          "Champion": 0.0,
-          "Country": "Soviet Union",
-          "Finalist": 0.0,
-          "Fourth": 1.0,
-          "Second": 0.0,
-          "Third": 0.0,
-          "Total F4 Appearances": 1.0
-        },
-        {
-          "Champion": 1.0,
-          "Country": "Spain",
-          "Finalist": 1.0,
-          "Fourth": 1.0,
-          "Second": 0.0,
-          "Third": 0.0,
-          "Total F4 Appearances": 2.0
-        },
-        {
-          "Champion": 0.0,
-          "Country": "Sweden",
-          "Finalist": 1.0,
-          "Fourth": 1.0,
-          "Second": 1.0,
-          "Third": 2.0,
-          "Total F4 Appearances": 4.0
-        },
-        {
-          "Champion": 0.0,
-          "Country": "Turkey",
-          "Finalist": 0.0,
-          "Fourth": 0.0,
-          "Second": 0.0,
-          "Third": 1.0,
-          "Total F4 Appearances": 1.0
-        },
-        {
-          "Champion": 0.0,
-          "Country": "USA",
-          "Finalist": 0.0,
-          "Fourth": 0.0,
-          "Second": 0.0,
-          "Third": 1.0,
-          "Total F4 Appearances": 1.0
-        },
-        {
-          "Champion": 2.0,
-          "Country": "Uruguay",
-          "Finalist": 2.0,
-          "Fourth": 3.0,
-          "Second": 0.0,
-          "Third": 0.0,
-          "Total F4 Appearances": 5.0
-        },
-        {
-          "Champion": 0.0,
-          "Country": "Yugoslavia",
-          "Finalist": 0.0,
-          "Fourth": 2.0,
-          "Second": 0.0,
-          "Third": 0.0,
-          "Total F4 Appearances": 2.0
-        }
-      ]
-    },
-    "encoding": {
-      "color": {
-        "field": "Legend",
-        "type": "nominal"
-      },
-      "x": {
-        "field": "Country",
-        "sort": "y",
-        "title": "Country with Final Four Appearance",
-        "type": "nominal"
-      },
-      "y": {
+    "tooltip": [
+      {
         "field": "stacked",
-        "title": "Total Final Four Appearances + Championships",
+        "title": "Count",
         "type": "quantitative"
       }
-    },
-    "height": 300,
-    "mark": "bar",
-    "title": "Final Four Appearances vs. Championships by Country",
-    "transform": [
-      {
-        "as": [
-          "Legend",
-          "stacked"
-        ],
-        "fold": [
-          "Total F4 Appearances",
-          "Champion"
-        ]
-      }
     ],
-    "width": 900
-  }
+    "x": {
+      "axis": {
+        "labelAngle": -45
+      },
+      "field": "Country",
+      "sort": "y",
+      "title": "Country",
+      "type": "nominal"
+    },
+    "y": {
+      "field": "stacked",
+      "title": "Final Four Appearances / Championships",
+      "type": "quantitative"
+    }
+  },
+  "height": 250,
+  "mark": "bar",
+  "title": "Final Four Appearances vs. Championships by Country",
+  "transform": [
+    {
+      "as": [
+        "Legend",
+        "stacked"
+      ],
+      "fold": [
+        "Total F4 Appearances",
+        "Champion"
+      ]
+    }
+  ],
+  "width": 800
+}
